--- a/yard/skills/00-web/django_demo/blog/templates/article/detail.html
+++ b/yard/skills/00-web/django_demo/blog/templates/article/detail.html
@@ -22,9 +22,9 @@
     </div>
     <div class="row page-body">
         <div class="col-md-12 col-offset-10" style="background-color: cornsilk;">
-            <p>
-                {{ article.content }}
-            </p>
+            {% for section in section_list %}
+                <p>{{ section }}</p>
+            {% endfor %}
         </div>
     </div>
 </div>
