--- a/yard/skills/00-web/django_demo/blog/templates/article/index.html
+++ b/yard/skills/00-web/django_demo/blog/templates/article/index.html
@@ -25,11 +25,11 @@
         <div class="col-md-9" role="main">
             {% for article in article_list %}
                 <div>
-                    <h2>{{ article.title }}</h2>
-                    <h4>{{ article.subtitle }}</h4>
-                    <p>
-                        {{ article.brief_content }}
-                    </p>
+                    <a href="/blog/article/{{ article.article_id }}">
+                        <h2>{{ article.title }}</h2>
+                        <h4>{{ article.subtitle }}</h4>
+                    </a>
+                    <p>{{ article.brief_content }}</p>
                 </div>
             {% endfor %}
         </div>
@@ -37,7 +37,7 @@
             <div>
                 <h2>最新文章</h2>
                 {% for article in article_list %}
-                    <h4><a href="#">{{ article.title }}</a></h4>
+                    <h4><a href="/blog/{{article.article_id}}">{{ article.title }}</a></h4>
                 {% endfor %}
             </div>
         </div>
