--- a/yard/skills/00-web/django_demo/blog/templates/article/index.html
+++ b/yard/skills/00-web/django_demo/blog/templates/article/index.html
@@ -32,12 +32,28 @@
                     <p>{{ article.brief_content }}</p>
                 </div>
             {% endfor %}
+
+            <nav aria-label="...">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                        <a class="page-link" href="/blog/index?page={{ prev_page }}" tabindex="-1">&laquo;</a>
+                    </li>
+                    {% for num in page_num_range %}
+                        <li class="page-item">
+                            <a class="page-link" href="/blog/index?page={{ num }}">{{ num }}</a>
+                        </li>
+                    {% endfor %}
+                    <li class="page-item">
+                        <a class="page-link" href="/blog/index?page={{ next_page }}">&raquo;</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="col-md-3" role="complementary">
             <div>
                 <h2>最新文章</h2>
-                {% for article in article_list %}
-                    <h4><a href="/blog/{{article.article_id}}">{{ article.title }}</a></h4>
+                {% for article in latest_article_list %}
+                    <h4><a href="/blog/{{ article.article_id }}">{{ article.title }}</a></h4>
                 {% endfor %}
             </div>
         </div>
