study and updated

--- a/yard/skills/66-go/quick-start/src/_examples/_iris/tutorial/dropzonejs/src/views/upload.html
+++ b/yard/skills/66-go/quick-start/src/_examples/_iris/tutorial/dropzonejs/src/views/upload.html
@@ -9,7 +9,7 @@
     <!-- 2 -->
     <script src="/public/js/dropzone.js"></script>
     <!-- 4 -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//libs.cdnjs.net/jquery/1.10.2/jquery.min.js"></script>
     <!-- 5 -->
     <script>
         Dropzone.options.myDropzone = {
