--- a/yard/toolkits/brain++/raw/templates/num.html
+++ b/yard/toolkits/brain++/raw/templates/num.html
@@ -5,6 +5,10 @@
     <title>{{.Title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+
+    <style>
+        .cell-item { margin-right: 10px; }
+    </style>
 </head>
 <body>
 
@@ -16,7 +20,7 @@
             {{range $i, $row := .Mat}}
                 <div class="col">
                     {{ range $j, $col := $row}}
-                        <span>{{ $col }}</span>
+                        <span class="cell-item">{{ $col }}</span>
                     {{ end }}
                 </div>
             {{end}}
