--- a/yard/skills/99-imooc/go-iris-superstar/web/views/admin/index.html
+++ b/yard/skills/99-imooc/go-iris-superstar/web/views/admin/index.html
@@ -30,7 +30,7 @@
         <td>{{$data.Club}}</td>
         <td>{{$data.Jersy}}</td>
         <td>{{$data.Country}}</td>
-        <td>{{FromUnixtime $data.SysUpdated}}</td>
+        <td>{{FromUnixTime $data.SysUpdated}}</td>
         <td>
             <a href="/admin/edit?id={{.Id}}">修改</a>
             <a href="/admin/delete?id={{.Id}}">删除</a>
